--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empresa</title>
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="landing/assets/css/styles.css">
 </head>
 <body>
-    <h1>Bienvenidos a mi Empresa</h1>
+    <div class="contenedor">
+        <nav>
+            <div class="logo">logo</div>
+            <div class="borde menu">menu</div>
+            <div class="borde ingreso">ingreso</div>
+
+        </nav>
+        <nav class="borde"></nav>
+        <header class="borde"></header>
+        <div class="borde titulo"></div>
+        <section class="borde portafolio"></div>
+            <div class="borde port-izq"></div>
+            <div class="borde port-der"></div>
+            <div class="borde port cnt"></div>
+        <div class="borde titulo"></div>
+        <section class="borde nosotros"></div>
+        <div class="borde titulo"></div>
+        <section class="borde contacto"></div>
+        <footer class="borde"></footer>
+    </div>
     <script src="assets/js/scripts.js"></script>
     
 </body>
-</html>         
+</html>        
